# sigma-racer-efi

./: ARCHITECTURE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
crates/board-mre/: Cargo.toml
crates/board-mre/src/: analog.rs  defaults.rs  lib.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  lib.rs  timing.rs
crates/core/src/engines/: mod.rs  rotax_v990.rs
crates/firmware/: Cargo.toml
crates/firmware/src/: main.rs
efi/: Cargo.toml  README.md
efi/src/: analog.rs  config.rs  defaults.rs  engine.rs  lib.rs
efi/src/engines/: mod.rs  profile.rs  rotax_v990.rs  yamaha_cp3.rs
src/: analog.rs  bor.rs  can.rs  config.rs  datalog.rs  decoder.rs  defaults.rs  engine.rs  fueling.rs  lib.rs  pins.rs  rbw.rs  replay.rs  safety.rs  scheduler.rs  sensors.rs  tables.rs  timing.rs  tle8888.rs
src/board/: bor.rs  heap.rs  identity.rs  mod.rs  mre_board.rs  output.rs  pins.rs  wiring.rs
src/board/mre_board/: safe_outputs.rs  sensor_channels.rs
src/board/pins/: gpio_pin.rs  gpio_port.rs
src/board/tle8888/: bus.rs  command.rs  mod.rs
src/comms/: m7.rs  mod.rs  snapshot.rs
src/engine/: config.rs  firing.rs  mod.rs  profile.rs  state.rs  yamaha_cp3.rs
src/engine/config/: config_error.rs  ignition_mode.rs  injection_mode.rs
src/engine/profile/: profile_error.rs
src/engines/: profile.rs  yamaha_cp3.rs
src/fuel/: injector.rs  mod.rs  speed_density.rs  table.rs
src/fuel/table/: curve.rs
src/ignition/: dwell.rs  mod.rs
src/pins/: embassy.rs
src/pins/embassy/: tle8888.rs
src/replay/: mod.rs  plan.rs  step.rs
src/replay/plan/: steps.rs
src/scheduler/: buffer.rs  core.rs  event.rs  mod.rs
src/scheduler/core/: table_full.rs
src/scheduler/event/: armed.rs  event_id.rs
src/sensor/: channel.rs  mod.rs  mre.rs  scaling.rs  sweep.rs
src/sensor/scaling/: ntc_config.rs
src/sensor/sweep/: sensor_frame.rs
src/throttle/: config.rs  mod.rs  monitor.rs
src/throttle/config/: rbw_inputs.rs  sensor_cal.rs
src/throttle/monitor/: rbw_command.rs  rbw_state.rs  side.rs  trip_cause.rs
src/trigger/: decoder.rs  intervals.rs  mod.rs  setup.rs  wheel.rs
src/trigger/decoder/: decode_event.rs  decoder_output.rs  desync_cause.rs  sync_state.rs  thresholds.rs
src/trigger/intervals/: edge_event.rs  edge_report.rs  trigger_line.rs
src/trigger/setup/: trigger_input_kind.rs  trigger_state.rs
tests/: virtual_engine.rs
tools/dl2mdf/: Cargo.toml
tools/dl2mdf/src/: args.rs  can_rec.rs  main.rs  sensor_rec.rs  trigger_rec.rs
