[workspace]
resolver = "2"
members = ["crates/core", "crates/board-mre", "crates/firmware"]

[workspace.package]
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
publish = false

[profile.release]
debug = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
