[package]
name = "sigma-racer-efi"
version = "0.1.0"
description = "Embassy firmware for microRusEFI (STM32F767) — engine-agnostic ECU core"
edition = "2024"
rust-version = "1.90.0"
license = "MIT OR Apache-2.0"
authors = ["Sigma Tactical Group contributors <https://github.com/sigmatactical-org>"]
homepage = "https://sigmatactical.org"
publish = false

[workspace]
members = ["tools/dl2mdf"]

[lib]
name = "sigma_racer_efi"

[[bin]]
name = "sigma-racer-efi"
path = "src/bin/firmware.rs"
required-features = ["firmware"]

[[bin]]
name = "replay"
path = "src/bin/replay.rs"
required-features = ["firmware"]

[features]
default = []
engine-yamaha-cp3 = []
firmware = [
    "dep:embassy-stm32",
    "dep:embassy-executor",
    "dep:embassy-time",
    "dep:defmt",
    "dep:defmt-rtt",
    "dep:cortex-m",
    "dep:cortex-m-rt",
    "dep:panic-probe",
    "dep:critical-section",
    "dep:static_cell",
    "dep:embassy-sync",
    "dep:stm32-metapac",
    "dep:embedded-alloc",
]

[dependencies]
libm = "0.2.15"
# M7 safety-bus CAN contract — single source of truth shared with the cockpit
# (sigma-racer-sidearm). no_std via bounded dbc-rs buffers.
sigma-racer-sidearm = { git = "https://github.com/sigmatactical-org/sigma-racer-sidearm.git", rev = "a029927", default-features = false, features = ["alloc"] }

embassy-stm32 = { version = "0.6.0", optional = true, features = [
    "defmt",
    "stm32f767vi",
    "memory-x",
    "time-driver-any",
    "exti",
    "single-bank",
] }
embassy-executor = { version = "0.10.0", optional = true, features = [
    "platform-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-time = { version = "0.5.1", optional = true, features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-1_000_000",
] }
embassy-sync = { version = "0.8.0", optional = true, features = ["defmt"] }
defmt = { version = "1.1.1", optional = true }
defmt-rtt = { version = "1.0.0", optional = true }
cortex-m = { version = "0.7.6", optional = true, features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = { version = "0.7.0", optional = true }
panic-probe = { version = "1.0.0", optional = true, features = ["print-defmt"] }
critical-section = { version = "1.1.4", optional = true }
static_cell = { version = "2.1.1", optional = true }
stm32-metapac = { version = "21.0.0", optional = true, features = ["stm32f767vi"] }
embedded-alloc = { version = "0.7.0", optional = true }

[package.metadata.embassy]
build = [
    { target = "thumbv7em-none-eabihf", artifact-dir = "target/thumbv7em-none-eabihf/release" },
]

[profile.release]
debug = 2
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
