[package]
name = "sigma-efi-board-mre"
version = "0.1.0"
description = "microRusEFI board pin map and default configuration"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[dependencies]
sigma-efi-core = { path = "../core" }
